# CBS_PYTHON

./: .env.example  .gitignore  .pylintrc  CBS_PYTHON_PRD.md  CBS_PYTHON_V2.0_API_CONTRACT.md  CBS_PYTHON_V2.0_EXECUTION_CHECKLIST.md  CBS_PYTHON_V2.0_IMPLEMENTATION_SUMMARY.md  CBS_PYTHON_V2.0_PRD.md  CBS_PYTHON_V2.0_RULEBOOK.md  CBS_PYTHON_V2_OPTIMIZED_PRD.md  CBS_PYTHON_V3.0_CORE_FEATURES_COMPREHENSIVE_LIST.md  CBS_PYTHON_V3.0_IMPLEMENTATION_PLAN.md  CHANGELOG.md  CLEAN_ARCHITECTURE_PROGRESS.md  CONTRIBUTING.md  CORE_FEATURES_COMPREHENSIVE_LIST.md  FRESH_ARCHITECTURE_SETUP_PLAN.md  IMPLEMENTATION_STATUS.md  LICENSE  README.md  changelog.txt  check_system_stability.py  config.py  debug_account_controller.py  final_tasks.md  fix_stability_issues.py  init_system.py  integrate.py  main.py  majorupdate.md  post_release_checklist.md  pyproject.toml  register_modules.py  release_summary.md  requirements-api.txt  requirements.txt  run_api.py  setup.py  simple_stability_check.py  summery.md  (+20 more)
.github/: PULL_REQUEST_TEMPLATE.md
admin_panel/: __init__.py  admin_console.py  admin_dashboard.py  settings.py  transaction_logs.py  user_management.py
analytics_bi/: README.md  __init__.py  config.py
archive/v3_cleanup_backup/cbs-platform/: pyproject.toml  requirements.txt
archive/v3_cleanup_backup/cbs-platform/.github/workflows/: ci-cd.yml
archive/v3_cleanup_backup/cbs-platform/docs/: API_DOCUMENTATION.md
archive/v3_cleanup_backup/cbs-platform/platform/api-schema/: openapi-v2.yml
archive/v3_cleanup_backup/cbs-platform/platform/config/: development.yaml  production.yaml
archive/v3_cleanup_backup/cbs-platform/platform/shared/auth/: __init__.py
archive/v3_cleanup_backup/cbs-platform/services/account-service/: alembic.ini
archive/v3_cleanup_backup/cbs-platform/services/account-service/migrations/: env.py
archive/v3_cleanup_backup/cbs-platform/services/account-service/src/account_service/application/: __init__.py
archive/v3_cleanup_backup/cbs-platform/services/account-service/src/account_service/domain/entities/: __init__.py
archive/v3_cleanup_backup/cbs-platform/services/account-service/src/account_service/infrastructure/: __init__.py
archive/v3_cleanup_backup/cbs-platform/services/account-service/src/account_service/infrastructure/database/: __init__.py  models.py
archive/v3_cleanup_backup/cbs-platform/services/account-service/src/account_service/interfaces/api/: __init__.py
archive/v3_cleanup_backup/cbs-platform/services/audit-service/: alembic.ini
archive/v3_cleanup_backup/cbs-platform/services/audit-service/src/audit_service/: __init__.py
archive/v3_cleanup_backup/cbs-platform/services/audit-service/src/audit_service/domain/entities/: __init__.py
archive/v3_cleanup_backup/cbs-platform/services/audit-service/src/audit_service/interfaces/: __init__.py
archive/v3_cleanup_backup/cbs-platform/services/audit-service/src/audit_service/interfaces/api/: __init__.py
archive/v3_cleanup_backup/cbs-platform/services/customer-service/migrations/: env.py
archive/v3_cleanup_backup/cbs-platform/services/customer-service/src/customer_service/application/use_cases/: __init__.py
archive/v3_cleanup_backup/cbs-platform/services/customer-service/src/customer_service/domain/entities/: __init__.py
archive/v3_cleanup_backup/cbs-platform/services/gateway-service/src/gateway/: webhook_manager.py
archive/v3_cleanup_backup/cbs-platform/services/gateway-service/src/gateway_service/: main_v2.py  routing.py
archive/v3_cleanup_backup/cbs-platform/services/loan-service/src/loan_service/domain/entities/: __init__.py
archive/v3_cleanup_backup/cbs-platform/services/loan-service/src/loan_service/infrastructure/database/: __init__.py
archive/v3_cleanup_backup/cbs-platform/services/loan-service/src/loan_service/interfaces/api/: __init__.py
archive/v3_cleanup_backup/cbs-platform/services/notification-service/: alembic.ini
archive/v3_cleanup_backup/cbs-platform/services/notification-service/src/notification_service/domain/entities/: __init__.py
archive/v3_cleanup_backup/cbs-platform/services/notification-service/src/notification_service/infrastructure/database/: __init__.py
archive/v3_cleanup_backup/cbs-platform/services/notification-service/src/notification_service/interfaces/api/: __init__.py
archive/v3_cleanup_backup/cbs-platform/services/payment-service/: alembic.ini
archive/v3_cleanup_backup/cbs-platform/services/payment-service/src/payment_service/application/use_cases/: __init__.py
archive/v3_cleanup_backup/cbs-platform/services/payment-service/src/payment_service/infrastructure/repositories/: __init__.py
archive/v3_cleanup_backup/cbs-platform/services/transaction-service/: alembic.ini
archive/v3_cleanup_backup/cbs-platform/services/transaction-service/src/transaction_service/application/use_cases/: __init__.py
archive/v3_cleanup_backup/cbs-platform/services/transaction-service/src/transaction_service/domain/entities/: __init__.py  transaction.py
archive/v3_cleanup_backup/cbs-platform/services/transaction-service/src/transaction_service/infrastructure/database/: __init__.py
archive/v3_cleanup_backup/cbs-platform/services/transaction-service/src/transaction_service/interfaces/api/: __init__.py
archive/v3_cleanup_backup/cbs-platform/tests/e2e/: test_workflows.py
backend/: README.md  requirements.txt  server.py  start_services.sh
cbs-platform/: Dockerfile  Makefile  README.md  STATUS_REPORT_V2.md  docker-compose.yml
core_banking/: CLEAN_ARCHITECTURE_GUIDE.md  CLEAN_ARCHITECTURE_PROGRESS.md  INFRASTRUCTURE_LAYER.md  README.md  __init__.py  admin_integration.py  docs  examples  module_interface.py
crm/: CLEAN_ARCHITECTURE_GUIDE.md  CLEAN_ARCHITECTURE_PROGRESS.md  customer_database.py  module_interface.py
database/: TROUBLESHOOTING.md  __init__.py
digital_channels/: CLEAN_ARCHITECTURE_GUIDE.md  CLEAN_ARCHITECTURE_PROGRESS.md  README.md  __init__.py  admin_integration.py  module_interface.py  service_registry.py
docs/: configuration.md
documentation/: CHANGELOG.md  INDEX.md  LICENSE  README.md
dump/: dump_summary.txt
frontend/: package.json  (+2 more)
(+1578 files in other folders)
