[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "core-banking-system"
version = "1.1.1"
description = "A Core Banking System implementation in Python"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
    {name = "CBS Team", email = "example@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "fastapi>=0.100.0",
    "flask>=2.3.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "cryptography>=41.0.0",
    "PyYAML>=6.0",
    "python-dotenv>=1.0.0",
    "requests>=2.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.10.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
gui = ["PyQt5>=5.15.0"]
postgresql = ["psycopg2-binary>=2.9.0"]
mysql = ["mysql-connector-python>=8.0.0"]

[project.urls]
"Homepage" = "https://github.com/your-username/CBS-python"
"Bug Tracker" = "https://github.com/your-username/CBS-python/issues"

[project.scripts]
cbs = "app.bin.cli:main"

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
